# eviler_backend

./: .dockerignore  .env  Dockerfile  celerybeat-schedule.dir  db.sqlite3  docker-compose.yml  entrypoint.sh  guide  manage.py  pyproject.toml  requirements.txt  restart.sh
api/: admin.py  auth.py  check_nft.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_activemodule_module.py  0002_alter_evileruser_email.py  0003_alter_activemodule_module.py  0003_alter_evileruser_managers_evileruser_discord_id.py  0004_alter_activemodule_module.py  0004_rename_discord_evileruser_discord_and_more.py  0005_alter_activemodule_module.py  0005_licensekey_remove_update_article_activesession_and_more.py  0006_evileruser_licensekey_delete_activemodule.py  0006_imagemodel_news.py  0007_evileruser_public_key_alter_evileruser_discord_and_more.py  0007_rename_image_imagemodel_image.py  0008_remove_evileruser_discord_and_more.py  0009_alter_evileruser_public_key.py  0010_alter_evileruser_password.py  0011_alter_evileruser_username.py  0012_alter_news_images.py  0013_rename_licensekey_evileruser_license_key_and_more.py  0014_alter_activesession_id.py  0015_remove_evileruser_license_key_licensekey_owner_and_more.py  0016_licensekey_nftaddress_alter_licensekey_key.py  0020_alter_licensekey_key.py  (+10 more)
eviler/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
front/: Dockerfile  package-lock.json  package.json
js-utils/: index.js  package-lock.json  package.json
nftLicense/: app.js  gateway.js  nftLicense.js  package-lock.json  package.json
(+5 files in other folders)
