[tool.poetry]
name = "eviler-backend"
version = "0.1.0"
description = ""
authors = ["aslanahmtv <aslanahmtv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"
celery = "^5.4.0"
gunicorn = "^22.0.0"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.3.1"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.9"
solana = "^0.34.0"
aiohttp = "^3.9.5"
base58 = "^2.1.1"
requests = "^2.31.0"
pynacl = "^1.5.0"
solders = "^0.21.0"
asn1 = "^2.7.0"
moralis = "^0.1.46"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
